--- a/styles/cart.css
+++ b/styles/cart.css
@@ -4,9 +4,11 @@ body{
     font-family: sans-serif;
     font-size: medium;
 }
+
 h2{
     font-size: 18px;
 }
+
 h1{
     font-size: 22px;
 }
@@ -15,7 +17,7 @@ h1{
     margin:0px,0px,30px;
     padding:30px 30px 0px;
     /* font:10px "Times New Roman"; */
-    border:1px solid black;
+    /* border:1px solid black; */
 }
 
 #sw-section-1{
@@ -26,7 +28,7 @@ h1{
     display:flex;
     /* justify-content: space-around; */
     gap:30px;
-    border:1px solid blue;
+    /* border:1px solid blue; */
     padding: 20px;
    
 }
@@ -41,8 +43,8 @@ h1{
     width:60%;
     gap:20px;
     margin:0px 50px;
-    padding:0px 60px;
-    border:1px solid orange;
+    padding:0px 45px;
+    /* border:1px solid orange; */
 }
 
 #sw-left-section >div{
@@ -51,7 +53,7 @@ h1{
     gap:20px;
     margin:0px 50px;
     padding:0px 60px;
-    border:1px solid blueviolet;
+    /* border:1px solid blueviolet; */
 }
 
 #sw-left-section > p:nth-child(1){
@@ -59,7 +61,7 @@ h1{
    font-family: sans-serif;
 }
 #sw-right-section{
-    border:1px solid rgb(144, 56, 56);
+    /* border:1px solid rgb(144, 56, 56); */
     width: 30%;
 
 }
@@ -79,7 +81,7 @@ h1{
     gap:30px;
     align-items: center; 
     gap:10px;
-    border:1px solid maroon;
+    
 }
 
 #sw-orderSum-content{
@@ -129,19 +131,19 @@ h1{
     border: .5px solid rgb(189, 185, 185);
     padding: 20px;
 }
-#sw-slideshow-div{
+/* #sw-slideshow-div{
     width:60%;
-}
-#sw-slideshow-div >div {
-    /* width:100px;
-    height:100px; */
-    /* width:60%; */
+    border:1px solid rgb(144, 56, 56);
+
+} */
+/* #sw-slideshow-div >div {
+  
     gap: 20px;
     margin:10px 60px;
     display:grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows:auto ;
-}
+} */
 #sw-you-may{
  width:60%;
  padding: 10px;
@@ -151,3 +153,158 @@ h1{
     width:153px;
     height:230px;
 }
+#sw-apply-btn{
+    background-color: white;
+}
+
+
+
+ /* append data css */
+
+ #sw-cart-data{
+     display: flex;
+     /* justify-content: space-between; */
+     gap:140px;
+     /* padding: 10px; */
+     /* border:1px solid maroon; */
+     
+ }
+ #sw-cart-data-2  {
+    margin-left: 50px;
+    display: flex;
+    gap:40px;
+ }
+ #sw-box{
+    
+     display:flex;
+     /* justify-content: space-between ; */
+     flex-wrap: wrap;
+     gap:70px;
+     /* border:1px solid maroon; */
+ }
+
+ #sw-img_div >img {
+    height:200px;
+    width:150px;
+
+ }
+ #sw-info_div >p{
+     display: flex;
+     flex-direction: column;
+     /* gap:5px; */
+     /* border:1px solid maroon; */
+ }
+ #sw-price_div{
+     display: flex;
+     /* justify-content: space-evenly; */
+     gap:50px;
+ }
+
+ #sw-edit-btn ,#sw-remove_btn,#sw-save_btn{
+    text-decoration: none;
+    background-color: white;
+    border: none;
+    color:rgb(11, 117, 194);
+    text-decoration: underline;
+    cursor: pointer;
+    
+    /* border:1px solid maroon; */
+ }
+
+ #sw-remove_div{
+     display: flex;
+     justify-content: flex-end;
+     /* border:1px solid maroon; */
+     gap:10px;
+     padding: 5px;
+
+ }
+ #sw-afterpay{
+     margin-left: 5px;
+     width:70px;
+     height:15px;
+    margin-bottom: -2px;
+ }
+
+
+ /* slide show css starts */
+
+
+
+ .container{
+    display: flex;
+    position: relative;
+    width: 65%;
+    height: 300px;
+    justify-content: center;
+    margin-bottom: 60px;
+/*     border: solid red; */
+    
+   
+}
+
+
+
+.slide img{
+   
+    display: inline-block;
+   width:100%;
+ 
+   height:80%;
+   object-fit: contain;
+   object-position: center;
+
+}
+.caption{
+ 
+    box-sizing: border-box;
+  
+    text-align: center;
+    color: #1f4985;
+    font-weight: bold;
+    font-weight: 400;
+    margin-top: 16px;
+    font-size: 20px;
+    border: solid red;
+    margin-bottom: 60px;
+}
+   
+
+.arrow{
+    cursor: pointer;
+    position:absolute;
+    top: calc(50% - 33px) ;
+   
+    color: black;
+    background-color: blanchedalmond;
+    padding: 8px 10px;
+}
+.next{
+    right: 10px;
+}
+.prev{
+    left: 10px;
+}
+.slide{
+    
+    width: 220px;
+    height: 100%;
+
+}
+
+.sw-caption{
+    font: 12px Avenir Medium,sans-serif;
+    letter-spacing: .06rem;
+    margin-bottom: 0;
+    display: flex;
+    width: 100%;
+
+/*     border: solid red; */
+}
+
+
+
+ 
+
+
+ /* slide show csss ends */
